enrich javadoc